Rewrite executor to scan comments, remove tracking table infrastructure
Replace the DeferredIndexOperationDAO-based executor with a comments-based
approach: the executor opens a SchemaResource, finds indexes where
isDeferred()=true (virtual indexes from table comments not yet physically
built), and builds them using deferredIndexDeploymentStatements().

Remove DeferredIndexOperation POJO, DAO, status enum, and the
CreateDeferredIndexOperationTables upgrade step. Remove forceBuildAllPending()
from the readiness check — the visitor now handles deferred indexes in-place.

Simplify DeferredIndexService: add getMissingDeferredIndexStatements() to
expose raw SQL for applications that want custom execution. Remove
getProgress() (no tracking table to query).

Simplify UpgradeConfigAndContext: remove exponential backoff config
(retryBaseDelayMs, retryMaxDelayMs, forceBuildTimeoutSeconds).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>